# design-pattern

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
abstract_factory/: LinkPage.html  main.py
abstract_factory/factory/: __init__.py  helper.py  item.py  link.py  page.py  tray.py
abstract_factory/listfactory/: list_factory.py  list_tray.py
abstract_factory/tablefactory/: __init__.py  table_factory.py  table_page.py  table_tray.py
adapter/delegation/: main.py  print_banner.py
adapter/inheritance/: main.py  print_banner.py
bridge/: display.py  string_display_impl.py
builder/: html_builder.py  main.py  text_builder.py
composite/: directory.py  entry.py  file.py  main.py
decorator/: side_border.py  string_display.py
factory_method/: main.py
factory_method/framework/: factory.py
iterator/: aggregate.py  book_shelf.py  book_shelf_iterator.py  bookshelf.py  iterator.py  main.py
prototype/: main.py  message_box.py
prototype/framework/: manager.py
src/abstract_factory/: main.py
src/bridge/: count_display.py  display_impl.py  main.py
src/builder/: builder.py  director.py
src/chain_of_responsiblity/: limit_support.py  main.py  no_support.py  odd_support.py  special_support.py  support.py  trouble.py
src/composite/: directory.py  main.py
src/decorator/: border.py  display.py  full_border.py  main.py  string_buffer.py
src/facade/: maildata.txt  main.py  welcome.html
strategy/: hand.py  main.py  player.py  prob_strategy.py  winning_strategy.py
template_method/: abstract_display.py  char_display.py  main.py  string_display.py
(+71 files in other folders)
